minor fix in MinimalSleepSetReduction